<resources>
    <string name="app_name">RGBA</string>
    <string name="txtViewRedText">Red</string>
    <string name="txtViewGreenText">Green</string>
    <string name="txtViewBlueText">Blue</string>
    <string name="txtViewAlphaText">Alpha</string>
    <string name="action_about">About</string>
    <string name="author" translatable="false">Ryan Bowes (bowe0145)</string>
    <string name="actionBlack">Black</string>
    <string name="actionBlue">Blue</string>
    <string name="actionCyan">Cyan</string>
    <string name="actionGreen">Green</string>
    <string name="actionMagenta">Magenta</string>
    <string name="actionRed">Red</string>
    <string name="actionYellow">Yellow</string>
    <string name="actionWhite">White</string>
</resources>